--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,21 @@
-<p>
-  header works!
-</p>
+<header>
+  <div class="logo">
+    <img src="assets/img/logo.png" alt="">
+  </div>
+
+  <div class="menu-itens">
+    <ul>
+      <li>Home</li>
+      <li>Projetos</li>
+      <li>Sobre</li>
+      <li>Contato</li>
+    </ul>
+  </div>
+
+  <div class="social-icons">
+    <img src="assets/img/linkedin.svg" alt="Linkedin Icon">
+    <img src="assets/img/github.svg" alt="Github Icon">
+    <img src="assets/img/behance.svg" alt="Behance Icon">
+  </div>
+
+</header>
