--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,14 @@
-<app-header></app-header>
+<div class="home-main-container">
+  <app-header></app-header>
 
-<div class="first-block">
-  <div class="triangle">
+  <app-first-block></app-first-block>
 
-  </div>
+  <app-projects-block></app-projects-block>
+  
+  <app-about></app-about>
 
-  <div class="home-main-text">
-    <h1>
-      Lucas D'Alves
-      <br>
-      Front-End
-      <br>
-      &
-      <br>
-      Digital Designer
-    </h1>
-  </div>
+  <app-contact></app-contact>
 
-  <div class="scroll-down-container">
-
-  </div>
-</div>
-
-
-<div class="projects-container">
+  <app-footer></app-footer>
 
 </div>
-
-<app-about></app-about>
-
-<app-footer></app-footer>
