--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~normalize.css';
+
+@font-face {
+    font-family:'Open-Sans-Regular';
+    src: url('assets/fonts/OpenSans-Regular.ttf');
+}
+
+@font-face {
+    font-family:'Montserrat-Bold';
+    src: url('assets/fonts/Montserrat-Bold.ttf');
+}
+
+body{
+    font-family: "Open-Sans-Regular";
+}
+
+h1{
+    font-family: "Montserrat-Bold";
+}
