--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@ body{
     font-family: "Open-Sans-Regular";
 }
 
-h1{
+h1, h2, h3, h4, h5, h6{
     font-family: "Montserrat-Bold";
+}
+
+p{
+    color: #252525;
 }
