Updated some things, going to illustration

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,9 +2,9 @@
 
   <div class="about-title">
     <h2>
-      Olá! Seja bem vindo ao meu portfólio!
+      Olá! Seja bem vindo ao meu <span class="text-blue">portfólio!</span>
       <br>
-      Me chamo Lucas e sou um desenvolvedor Front-End!
+      Me chamo <span class="text-blue">Lucas</span> e sou um desenvolvedor <span class="text-blue">Front-End!</span>
     </h2>
   </div>
 
@@ -39,7 +39,7 @@
   </div>
 
   <div class="skills">
-    <h3>Eu trabalho constantemente com:</h3>
+    <h3>Eu <span class="text-blue">trabalho constantemente</span> com:</h3>
 
     <div class="skill-container">
       <div *ngFor="let skill of skills" class="skill-node">
