--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,3 +1,99 @@
-.contact-container{
+.contact-background{
+    width: 100%;
     background-color: #f6f8fa;
+    // background-color: #f7f7f7;
+}
+.contact-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
+.contact-container h2{
+    grid-column: 2 span;
+}
+
+.social-node{
+    display: grid;
+    grid-template-columns: 50px auto;
+    padding: 1rem;
+    border-radius: 4px;
+    background-color: #eff3f7;
+    margin: 2rem;
+    box-sizing: border-box;
+    border: 1px solid transparent;
+}
+
+.social-node:hover{
+    border: 1px solid #c3d4e7;
+}
+
+
+.social-node img{
+    filter: invert(50%);
+    width: 40px;
+}
+
+.social-node h6{
+    font-size: 1rem;
+    margin: 0;
+    align-self: center;
+    color: #585858;
+}
+
+a{
+    margin-top: 10px;
+    grid-column: 2 span;
+    text-decoration: none;
+    color: #000;
+}
+
+.direct-contact{
+    margin-top: 2rem;
+    // background-color: #eff3f7;
+    margin-bottom: 2rem;
+    gap: 2rem;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: 55px 1fr;
+    align-content: flex-start;
+}
+
+.direct-contact label{
+    color: #585858;
+}
+
+input, textarea{
+    border: 1px solid #c9d6e4;
+    height: 30px;
+    min-width: 125px;
+    background-color: #eff3f7;
+    margin-bottom: 10px;
+    outline: none;
+    color: #585858;
+    border-radius: 4px;
+}
+
+input:focus, textarea:focus{
+    box-shadow: 0 3px 6px rgba(42, 42, 43, 0.1), 0 3px 6px rgba(31, 31, 31, 0.15);
+}
+
+.nome-container,.email-container,.textarea-container label,input,textarea {
+    width: 100%;
+}
+
+.textarea-container textarea{
+    margin: 0;
+    height: calc(100% - 1.5rem);
+}
+
+.textarea-container{
+    grid-column: 2 span;
+}
+
+.send-button{
+    grid-column: 2 span;
+    text-align: right;
+    margin-bottom: 5rem;
 }
