--- a/src/app/first-block/first-block.component.scss
+++ b/src/app/first-block/first-block.component.scss
@@ -15,3 +15,13 @@
 h1{
     font-size: 3.5rem;
 }
+
+.arrow-down{
+    grid-column: 3 / span 2;
+    grid-row: -1;
+    text-align: center;
+}
+
+.arrow-down img{
+    width: 100px;
+}
