--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,8 @@ header{
     left: 0;
     top: 0;
     height: 100vh;
-    background-color: rgb(247, 247, 247);
+    background-color: #f6f8fa;
+    
     color: #585858;
     display: flex;
     flex-direction: column;
