--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -73,6 +73,8 @@ input, textarea{
     outline: none;
     color: #585858;
     border-radius: 4px;
+    padding: 0 1rem;
+    box-sizing: border-box;
 }
 
 input:focus, textarea:focus{
