Working in page scroll

--- a/src/app/first-block/first-block.component.html
+++ b/src/app/first-block/first-block.component.html
@@ -4,11 +4,11 @@
     <h1>
       Lucas D'Alves
       <br>
-      Front-End
+      <span class="text-blue">Front-End</span>
       <br>
       &
       <br>
-      Digital Designer
+      Digital <span class="text-blue">Designer</span>
     </h1>
   </div>
 
