--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,7 @@
-<div class="home-main-container">
-  <app-header></app-header>
+  <app-first-block id="home"></app-first-block>
 
-  <app-first-block></app-first-block>
-
-  <app-projects-block></app-projects-block>
+  <app-projects-block id="projects"></app-projects-block>
   
-  <app-about></app-about>
+  <app-about id="about"></app-about>
 
-  <app-contact></app-contact>
-
-  <app-footer></app-footer>
-
-</div>
+  <app-contact id="contact"></app-contact>
