--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,30 +1,58 @@
 <div class="project-page-container">
-  <div class="fixed-content">
-    <img [src]="'assets/img/card/' + project.cardName + '.jpg'" alt="">
 
-    <h1> {{ project.name }} </h1>
+  <div class="project-apresentation">
 
-    <p [innerHTML]="project.description"></p>
+      <img [src]="'assets/img/card/' + project.cardName + '.jpg'" [alt]="project.cardName">
 
-    <h2>
-      O que eu fiz
-    </h2>
+      <h1> {{ project.name }} </h1>
 
-    <ul class="roles-list">
-      <li *ngFor="let role of project.roles">{{role}}</li>
-    </ul>
+      <p [innerHTML]="project.description"></p>
 
-    <h2>
-      Ferramentas utilizadas 
-    </h2>
+      <div class="roles">
+        <h2>
+          O que eu fiz
+        </h2>
+  
+        <ul class="roles-list">
+          <li *ngFor="let role of project.roles">{{role}}</li>
+        </ul>      
+      </div>
 
-    <div class="tools-container">
-      <img *ngFor="let tool of project.tools" [src]="'assets/img/icons/' + tool + '.svg'" alt="">
+      <div class="tools">
+        <h2>
+          Ferramentas utilizadas 
+        </h2>
+  
+        <div class="tools-container">
+          <img *ngFor="let tool of project.tools" [src]="'assets/img/icons/' + tool + '.svg'" alt="">
+        </div>      
+      </div>
+
+
+  </div>
+
+
+
+
+    <!-- <div class="fixed-content">
+      <img [src]="'assets/img/card/' + project.cardName + '.jpg'" alt="">
+
+      <h1> {{ project.name }} </h1>
+
+      <p [innerHTML]="project.description"></p>
+
+
+      <h2>
+        Ferramentas utilizadas 
+      </h2>
+
+      <div class="tools-container">
+        <img *ngFor="let tool of project.tools" [src]="'assets/img/icons/' + tool + '.svg'" alt="">
+      </div>
+
     </div>
 
-  </div>
+    <div class="scrollable-content">
 
-  <div class="scrollable-content">
-
-  </div>
+    </div> -->
 </div>
