--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <header>
   <div class="logo">
-    <img src="assets/img/logo.png" alt="">
+    <a [routerLink]="['/']" fragment="home">
+      <img src="assets/img/logo.png" alt="">
+    </a>
   </div>
 
   <div class="menu-itens">
@@ -25,11 +27,19 @@
   </div>
 
   <div class="social-icons">
-    <a href="">
+
+    <a href="https://www.linkedin.com/in/lucasdalves/" target="_blank">
       <img src="assets/img/linkedin.svg" alt="Linkedin Icon">
     </a>
-    <img src="assets/img/github.svg" alt="Github Icon">
-    <img src="assets/img/behance.svg" alt="Behance Icon">
+
+    <a href="https://github.com/Lucas-Damasceno" target="_blank">
+      <img src="assets/img/github.svg" alt="Github Icon">
+    </a>
+
+    <a href="https://www.behance.net/LucasDAlves" target="_blank">
+      <img src="assets/img/behance.svg" alt="Behance Icon">
+    </a>
+
   </div>
 
 </header>
