--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -49,7 +49,7 @@ header{
 .social-icons img{
     width: 30px;
     filter: invert(50%);
-    padding-bottom: 10px;
+    margin-bottom: 10px
 }
 
 .social-icons img:last-of-type{
