--- a/src/app/first-block/first-block.component.scss
+++ b/src/app/first-block/first-block.component.scss
@@ -25,3 +25,14 @@ h1{
 .arrow-down img{
     width: 80px;
 }
+
+@media screen and (max-width: 550px){
+    h1{
+        font-size: 3rem;
+        margin-top: 3rem;
+    }
+
+    .arrow-down img{
+        width: 40px;
+    }
+}
