--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header-desktop">
   <div class="logo">
     <a [routerLink]="['/']" fragment="home">
       <img src="assets/img/logo.png" alt="">
@@ -43,3 +43,57 @@
   </div>
 
 </header>
+
+
+<header class="header-mobile">
+  <div class="menu-hamburguer" (click)="menuMobileOpen = !menuMobileOpen">
+    <div class="menu-line"></div>
+    <div class="menu-line"></div>
+    <div class="menu-line"></div>
+  </div>
+
+  <div class="logo">
+    <a [routerLink]="['/']" fragment="home">
+      <img src="assets/img/logo.png" alt="">
+    </a>
+  </div>
+
+  <div class="social-icons">
+
+    <a href="https://www.linkedin.com/in/lucasdalves/" target="_blank">
+      <img src="assets/img/linkedin.svg" alt="Linkedin Icon">
+    </a>
+
+    <a href="https://github.com/Lucas-Damasceno" target="_blank">
+      <img src="assets/img/github.svg" alt="Github Icon">
+    </a>
+
+    <a href="https://www.behance.net/LucasDAlves" target="_blank">
+      <img src="assets/img/behance.svg" alt="Behance Icon">
+    </a>
+
+  </div>
+  
+</header>
+
+<div class="menu-mobile" [ngClass]="menuMobileOpen ? 'menu-open' : 'menu-closed'">
+    <ul>
+
+      <a [routerLink]="['/']" fragment="home">
+        <li>Home</li>
+      </a>
+
+      <a [routerLink]="['/']" fragment="projects">
+        <li>Projetos</li>
+      </a>
+
+      <a [routerLink]="['/']" fragment="about">
+        <li>Sobre</li>
+      </a>
+
+      <a [routerLink]="['/']" fragment="contact">
+        <li>Contato</li>
+      </a>
+
+    </ul>
+</div>
