--- a/src/app/projects-block/projects-block.component.scss
+++ b/src/app/projects-block/projects-block.component.scss
@@ -29,3 +29,15 @@
 .card-text:hover{
     opacity: 1;
 }
+
+@media screen and(max-width: 1000px){
+    .cards-container{
+        grid-template-columns: 50% 50%;
+    }
+}
+
+@media screen and(max-width: 500px){
+    .cards-container{
+        grid-template-columns: 1fr ;
+    }
+}
