--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,10 @@ button:hover{
     box-shadow: 0 3px 6px rgba(42, 42, 43, 0.1), 0 3px 6px rgba(31, 31, 31, 0.15);
 }
 
+textarea{
+    resize: none;
+}
+
 .text-blue{
     background-color: #e0e8f0;
     display: inline-block;
