minor fixes in 360p resolution

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -141,3 +141,9 @@ h3{
         grid-template-columns: 1fr;
     }
 }
+
+@media screen and (max-width: 360px){
+    .about-title h2{
+        font-size: 2rem;
+    }
+}
