Updated project-blocks component

--- a/src/app/first-block/first-block.component.html
+++ b/src/app/first-block/first-block.component.html
@@ -13,7 +13,9 @@
   </div>
 
   <div class="arrow-down">
-    <img src="assets/img/arrow-down.svg" alt="">
+    <a [routerLink]="['/']" fragment="projects">
+      <img src="assets/img/arrow-down.svg" alt="">
+    </a>
   </div>
 
 </div>
