--- a/src/app/projects-block/projects-block.component.html
+++ b/src/app/projects-block/projects-block.component.html
@@ -5,7 +5,8 @@
     
     <a [routerLink]="['/project/' + project.link]">
       <div class="card-text">
-        AAAAAAAA
+        <h3>{{project.name}}</h3>
+
       </div>      
     </a>
 
