--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,7 +10,11 @@
 
   <div class="about-me">
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ac tempor risus. Sed vitae massa in libero finibus ornare. Nam a est consectetur, porttitor purus ut, porttitor magna. Duis egestas elit sit amet nunc congue ultrices. Proin nec eros convallis dui egestas vehicula. Duis sed ligula imperdiet, maximus ligula vel, placerat dolor. Ut tempus sed nulla et sollicitudin. Etiam a velit accumsan, porta mauris quis, venenatis turpis. Nunc neque sapien, aliquet aliquet congue a, congue ac ante.
+      Nascido em São Paulo e amante da cultura Geek, sou uma pessoa que gosta de entender como as coisas funcionam, e fazer o que está quebrado voltar a funcionar.
+      Tento aprender pelo menos uma coisa nova a cada dia e ler um livro por semana, mesmo que seja de assuntos variados: música, programação, história, e física (O universo é um objeto de estudo encantador).
+      <br>
+      Sempre frequentei escola pública e fui bolsista Integral durante minha graduação na Anhembi Morumbi, tive meu primeiro contato com programação em 2014, durante o curso que fiz de Design Multimidia e de lá pra cá venho sempre aprendendo mais sobre. 
+
     </p>
   </div>
 
