--- a/src/app/project-page/project-page.component.scss
+++ b/src/app/project-page/project-page.component.scss
@@ -54,6 +54,16 @@
     margin-right: 10px;
 }
 
+.project-imgs{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.project-imgs img{
+    width: 100%;
+    margin-bottom: 4rem;
+}
+
 
 @media screen and (max-width: 970px){
     .project-apresentation{
