working with new projects

--- a/src/app/first-block/first-block.component.html
+++ b/src/app/first-block/first-block.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="arrow-down">
-    <a [routerLink]="['/']" fragment="projects">
+    <a href="#projects">
       <img src="assets/img/arrow-down.svg" alt="">
     </a>
   </div>
